# snowpack

Nander-Arctic-SNOWPACK-meteoio/SNOWPACKFoam/: Allwclean  Allwmake  SNOWPACKFoam.C  createArchiving.H  createFields.H  createSNOWPACK.H
Nander-Arctic-SNOWPACK-meteoio/SNOWPACKFoam/Make/: files  options  options_2ndOption
Nander-Arctic-SNOWPACK-meteoio/SNOWPACKFoam/OpenFOAM_solving/: EEqn.H  OF_solving.H  RaNumberCalculation.H  UEqn.H  compressibleContinuityErrs.H  iceFractionEqn.H  pEqn.H  rhoEqn.H  rhovEqn.H  runArchiving.H  setDeltaT.H  updateEquationOfState.H  updateHeatAndMassTransferCoeffs.H  voidFractionEqn.H  waterFractionEqn.H
Nander-Arctic-SNOWPACK-meteoio/SNOWPACKFoam/SNOWPACK_OpenFOAM_exchange/: OF_to_SN_exchange.H  SN_to_OF_dynMesh.H  SN_to_OF_exchange.H
Nander-Arctic-SNOWPACK-meteoio/SNOWPACKFoam/interface_SNOWPACK/: CMakeLists.txt  interface_SNOWPACK.C  interface_SNOWPACK.H
Nander-Arctic-SNOWPACK-meteoio/SNOWPACKFoam/interface_SNOWPACK/Make/: files  options
Nander-Arctic-SNOWPACK-meteoio/SNOWPACKFoam/interface_SNOWPACK/Make/linux64GccDPInt32Opt/: interface_SNOWPACK.C.dep  options  sourceFiles  variables
Nander-Arctic-SNOWPACK-meteoio/SNOWPACKFoam/interface_SNOWPACK/lnInclude/: interface_SNOWPACK.C  interface_SNOWPACK.H
Nander-Arctic-SNOWPACK-meteoio/SNOWPACKFoam/topBoundaryLayerAdditionRemovalTopoFvMesh1/: topBoundaryLayerAdditionRemovalTopoFvMesh.C  topBoundaryLayerAdditionRemovalTopoFvMesh.H
Nander-Arctic-SNOWPACK-meteoio/new-run-SNOWPACKFoam/BYL-tundra-2014-2015-noHet/: Allrunpc
Nander-Arctic-SNOWPACK-meteoio/new-run-SNOWPACKFoam/BYL-tundra-2016-2017-noHet/: Allrunp  Allruns  extracting.py  test1
Nander-Arctic-SNOWPACK-meteoio/new-run-SNOWPACKFoam/BYL-tundra-2017-2018-noHet/: Nander-Mahdi-HS4.5-MO_MICHLMAYR.ods  Nander-Mahdi-bcup.ods  addingDensityDiffToSNPC.py
Nander-Arctic-SNOWPACK-meteoio/sngui-8.4/: ModelLogFile_  Model_Start.sh  SETUP.INI  SN_GUI.bat  launch.sh
Nander-Arctic-SNOWPACK-meteoio/sngui-8.4/DATA/: STN_1  STN_1.ini  STN_1.met
Nander-Arctic-SNOWPACK-meteoio/sngui-8.4/SETUP/: CONSTANTS.INI  CONSTANTS_Adv.INI  CONSTANTS_User.INI  PARDATA.INI  PARDATA200.INI  PARDATA201.INI  PARDATA202.INI  PARDATA203.INI  PARMENU1.INI  PARMENU2.INI  StartFile
Nander-Arctic-SNOWPACK-meteoio/sngui-8.4/doc/: sngui_manual.doc
Nander-Arctic-SNOWPACK-meteoio/sngui-8.4/src/: AnimationDialog.java  ArrayMap.java  AxisDialog.java  BoundedChangeListener.java  C_DataFile.java  ColorDialog.java  ColorRange.java  ColorTab.java  DataEntry.java  Graph.java  (+36 more)
(+102 files in other folders)
